$Id$

version ? (????-??-??):

  - fixed cash receipts problem with default numberplan (alec)

version 1.8.0 Rosha (2005-01-27):

  - fixed dynamic popups resizing in Firefox (alec)
  - fixed invoices list filtering by value (alec)
  - added variable 'user' on invoice for expositor name (alec)
  - fixed transfer forms printing for selected customer (alec)
  - contrib/customer_otherip: removed doubtful sample lms.ini (alec)

version 1.8.0rc5 Rosha (2006-01-15):

  - fixed credit notes printing from customer balance box (alec)
  - lms-rtparser: added support for multipart/alternative messages, fixed
    problem with attachements with spaces and unknown/forbidden characters
    in filename (alec)
  - on invoice note value can be set to '0' instead of '0.00' or deleting 
    position (alec)
  - contrib/bin/lms-debtors: fixed (alec)
  - fixed nett values calculations on Liabilities Report (alec)
  - documentation fixes (alec)
  - contrib/customer_otherip: fixed invoices printing - added lost checkconfig.php
    include (alec)

version 1.8.0rc4 Rosha (2006-01-06):

  - fixed new item addition in Cash Receipt Edit (alec)
  - removed doubled function CustomerGroupGetAll() call in print module (alec)
  - fixed link to all customer's documents list (alec)
  - setting moddate and modid when deleting customers (alec)
  - fixed from and to date setting for liabilities suspending (alec)
  - in documentation added 'netdevnode' lms-mgc's rule description (alec)

version 1.8.0rc3 Rosha (2005-12-22):

  - BTS#0000490: documentation: fixed pg_dump options (alec)
  - added some options description in configlist module (alec)
  - fixed reload when using reload_execcmd and reload_sqlquery with hosts (alec)
  - fixed 'TO' calculation when using Stats -> Filter (alec) 
  - bugfix in perl scripts for 64-bit architectures (Jarek Dziubek)
  - BTS#0000495: fixed "Invalid argument..." error in liability report (alec)
  - fixed html invoice pagetitle (alec)